@@ -1,10 +1,15 @@
-2012-03-29  Charlie Zender  <zender@uci.edu>
+2012-03-30  Charlie Zender  <zender@uci.edu>
+
+	* Modify and test NC_FLOAT portion of nco_var_avg() for	NaN-compatibility
+	Verify that ncwa will work with missing value = NaN with this algorithm
 
 	* NCO 4.2.0 release procedure:
  	Changes since nco-4_1_0: fxm
 	cd ~/nco;cvs tag -d nco-4_2_0;cvs tag -d nco-4_2_0-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.2.0 release"
 	cvs tag -c nco-4_2_0;cvs tag -c nco-4_2_0-1
+
+	* Clean-up nco_var_avg.c to prepare for NaN-handling
 
 2012-03-29  Charlie Zender  <zender@uci.edu>
 
